# realtime-facereccpp

./: .gitignore  CMakeLists.txt  README.md  install_requirements.md
data/: params.xml
data/mobilenet/: deploy_graph.json  deploy_param.params
facerecognition/: CMakeLists.txt
facerecognition/include/: DbManager.h  recognizer.h  tinyxml2.h
facerecognition/src/: main.cc  test_tvm.cc  tinyxml2.cc
facetracker/: CMakeLists.txt
facetracker/include/: BoxManager.h
facetracker/src/: main.cc
scripts/: compile_model.py  inference.py
